@@ -1,0 +1,1 @@
+ALTER TABLE account_balance MODIFY user_id VARCHAR(255) NOT NULL;
