@@ -1,0 +1,2 @@
+ALTER TABLE account_balance_transaction MODIFY account_balance_id INT NOT NULL;
+ALTER TABLE account_balance_transaction MODIFY transaction_type_id INT NOT NULL;
