@@ -1,0 +1,1 @@
+ALTER TABLE portfolio_balance MODIFY portfolio_id INT NOT NULL;
