@@ -1,0 +1,2 @@
+ALTER TABLE portfolio_follower MODIFY user_id VARCHAR(255) NOT NULL;
+ALTER TABLE portfolio_follower MODIFY portfolio_id INT NOT NULL;
