@@ -1,0 +1,2 @@
+ALTER TABLE portfolio_member MODIFY portfolio_id INT NOT NULL;
+ALTER TABLE portfolio_member MODIFY user_id VARCHAR(255) NOT NULL;
