@@ -1,0 +1,2 @@
+ALTER TABLE portfolio_stock MODIFY stock_id INT NOT NULL;
+ALTER TABLE portfolio_stock MODIFY portfolio_id INT NOT NULL;
