@@ -1,0 +1,2 @@
+ALTER TABLE portfolio_stock_transaction MODIFY transaction_type_id INT NOT NULL;
+ALTER TABLE portfolio_stock_transaction MODIFY portfolio_stock_id INT NOT NULL;
